Apply org.openrewrite.staticanalysis.PrimitiveWrapperClassConstructorToValueOf recipe