@@ -38,7 +38,7 @@ public class LocaleEntity
 {
     public static final String DEFAULT_LOCALE_SUBSTITUTE = ".default";
     
-    public static final Long CONST_LONG_ZERO = new Long(0L);
+    public static final Long CONST_LONG_ZERO = Long.valueOf(0L);
     
     private Long id;
     private Long version;
