@@ -36,7 +36,7 @@ import org.alfresco.util.EqualsHelper;
 public class QNameEntity
 {
     public static final String EMPTY_LOCALNAME_SUBSTITUTE = ".empty";
-    public static final Long CONST_LONG_ZERO = new Long(0L);
+    public static final Long CONST_LONG_ZERO = Long.valueOf(0L);
 
     private Long id;
     private Long version;
