@@ -1248,8 +1248,8 @@ public class SchemaBootstrap extends AbstractLifecycleBean
                 varAssignments.put("FALSE", "0");
             }
             long now = System.currentTimeMillis();
-            varAssignments.put("now", new Long(now).toString());
-            varAssignments.put("NOW", new Long(now).toString());
+            varAssignments.put("now", Long.valueOf(now).toString());
+            varAssignments.put("NOW", Long.valueOf(now).toString());
             
             while(true)
             {
